--- a/shop/templates/shop/pages/home.html
+++ b/shop/templates/shop/pages/home.html
@@ -2,6 +2,4 @@
 
 {% block title %} {{title}} {% endblock title %}
 
-{% block content %} 
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi rem architecto corrupti ipsum vel quo quia harum, odit, asperiores fugiat nihil fugit nam eligendi? Illum quas unde esse voluptatibus optio.</p>
-{% endblock content %}
+{% block content %} {% endblock content %}
