--- a/base_templates/global/partials/header.html
+++ b/base_templates/global/partials/header.html
@@ -3,4 +3,18 @@
 <link rel="stylesheet" href="{% static 'global/partials/header.css' %}">
 
 <header>
+    <div class="main-content-container">
+        <div class="item-list-container">
+            <ul class="list-container">
+                <li class="list">
+                    <a class="item" href="#">Home</a>
+                    <a class="item" href="#">Produtos</a>
+                    <a class="item" href="#">Dashboard</a>
+                </li>
+            </ul>
+        </div>
+        <div class="search-input-container">
+            <input class="search-input" type="search" name="search" id="">
+        </div>
+    </div>
 </header>
