--- a/base_static/global/partials/header.css
+++ b/base_static/global/partials/header.css
@@ -1,9 +1,40 @@
 :root{
-    --header-bg-color: #131921;
+    --header-bg-color: white;
 }
 
 
 header{
     height: 60px;
     background-color: var(--header-bg-color);
+}
+
+
+.main-content-container{
+    box-shadow: 2px 5px 7px rgba(0, 0, 0, 0.118);
+    padding: 30px;
+    display: flex;
+}
+
+.list{
+    gap: 30px;
+    display: flex;
+}
+
+
+.list-container{
+    list-style: none;
+}
+
+.list-container .item{
+    text-decoration: none;
+}
+
+.list-container .item:hover{
+    text-decoration: underline;
+}
+
+
+.search-input-container .search-input{
+    max-width: 400px;
+    width: 5000px;
 }
