--- a/base_templates/global/partials/header.html
+++ b/base_templates/global/partials/header.html
@@ -8,13 +8,24 @@
             <ul class="list-container">
                 <li class="list">
                     <a class="item" href="#">Home</a>
-                    <a class="item" href="#">Produtos</a>
+                    <a class="item" href="#">Products</a>
                     <a class="item" href="#">Dashboard</a>
                 </li>
             </ul>
         </div>
         <div class="search-input-container">
-            <input class="search-input" type="search" name="search" id="">
+            <input class="search-input" placeholder="Type here to search products, clothes..."  type="search" name="search" id="">
+        </div>
+        <div class="create-account-container">
+            <ul class="list-container">
+                <li class="account-item">
+                    <a class="item" href="#">Create Account</a>
+                    <a class="item" id="login"  href="#">Login</a>
+                    <figure class="account-icon">
+                        <img src="" alt="" class="icon-img">
+                    </figure>
+                </li>
+            </ul>
         </div>
     </div>
 </header>
