--- a/shop/templates/shop/partials/product.html
+++ b/shop/templates/shop/partials/product.html
@@ -7,19 +7,112 @@
     <h1 class="title-product">Products made for you</h1>
 </div>
 
-<div class="card-container">
-    <div class="card">
-        <figure class="card-img-container">
-            <a href="#"><img src="https://www.viewhotels.jp/ryogoku/wp-content/uploads/sites/9/2020/03/test-img.jpg" alt="" class="card-img"></a>
-        </figure>
-        <section class="card-info-container">
-            <h2 class="item" id="title">Titulo</h2>
-            <span>
-                <p class="item" id="author">Author</p>
-                <p class="item" id="cover">Cover</p>
-                <p class="item" id="price">Price</p>
-                <p class="item" id="rating">Rating</p>
-            </span>
-        </section>
+
+
+<div class="main-content">
+    <div class="category-container">
+        <h3>Qualquer categoria</h3>
+        <ul class="category-list-items">
+            <li class="category">Books</li>
+            <li class="category">Games</li>
+            <li class="category">Sports</li>
+            <li class="category">Kitchen</li>
+            <li class="category">Computers</li>
+            <li class="category">Sports</li>
+            <li class="category">Garden</li>
+            <li class="category">Electronics</li>
+            <li class="category">Fashion</li>
+            <li class="category">Home appliance</li>
+            <li class="category">Beauty</li>
+            <li class="category">Food and drinks</li>
+            <li class="category">Tools</li>
+            <li class="category">Home</li>
+        </ul>
     </div>
+    <div class="card-container">
+        <div class="card">
+            <figure class="card-img-container">
+                <a href="#"><img src="https://www.viewhotels.jp/ryogoku/wp-content/uploads/sites/9/2020/03/test-img.jpg" alt="" class="card-img"></a>
+            </figure>
+            <section class="card-info-container">
+                <h2 class="item" id="title">Titulo</h2>
+                <span>
+                    <p class="item" id="author">Author</p>
+                    <p class="item" id="cover">Cover</p>
+                    <p class="item" id="price">Price</p>
+                    <p class="item" id="rating">Rating</p>
+                </span>
+            </section>
+        </div>
+        <div class="card">
+            <figure class="card-img-container">
+                <a href="#"><img src="https://www.viewhotels.jp/ryogoku/wp-content/uploads/sites/9/2020/03/test-img.jpg" alt="" class="card-img"></a>
+            </figure>
+            <section class="card-info-container">
+                <h2 class="item" id="title">Titulo</h2>
+                <span>
+                    <p class="item" id="author">Author</p>
+                    <p class="item" id="cover">Cover</p>
+                    <p class="item" id="price">Price</p>
+                    <p class="item" id="rating">Rating</p>
+                </span>
+            </section>
+        </div>
+        <div class="card">
+            <figure class="card-img-container">
+                <a href="#"><img src="https://www.viewhotels.jp/ryogoku/wp-content/uploads/sites/9/2020/03/test-img.jpg" alt="" class="card-img"></a>
+            </figure>
+            <section class="card-info-container">
+                <h2 class="item" id="title">Titulo</h2>
+                <span>
+                    <p class="item" id="author">Author</p>
+                    <p class="item" id="cover">Cover</p>
+                    <p class="item" id="price">Price</p>
+                    <p class="item" id="rating">Rating</p>
+                </span>
+            </section>
+        </div>
+        <div class="card">
+            <figure class="card-img-container">
+                <a href="#"><img src="https://www.viewhotels.jp/ryogoku/wp-content/uploads/sites/9/2020/03/test-img.jpg" alt="" class="card-img"></a>
+            </figure>
+            <section class="card-info-container">
+                <h2 class="item" id="title">Titulo</h2>
+                <span>
+                    <p class="item" id="author">Author</p>
+                    <p class="item" id="cover">Cover</p>
+                    <p class="item" id="price">Price</p>
+                    <p class="item" id="rating">Rating</p>
+                </span>
+            </section>
+        </div>
+        <div class="card">
+            <figure class="card-img-container">
+                <a href="#"><img src="https://www.viewhotels.jp/ryogoku/wp-content/uploads/sites/9/2020/03/test-img.jpg" alt="" class="card-img"></a>
+            </figure>
+            <section class="card-info-container">
+                <h2 class="item" id="title">Titulo</h2>
+                <span>
+                    <p class="item" id="author">Author</p>
+                    <p class="item" id="cover">Cover</p>
+                    <p class="item" id="price">Price</p>
+                    <p class="item" id="rating">Rating</p>
+                </span>
+            </section>
+        </div>
+        <div class="card">
+            <figure class="card-img-container">
+                <a href="#"><img src="https://www.viewhotels.jp/ryogoku/wp-content/uploads/sites/9/2020/03/test-img.jpg" alt="" class="card-img"></a>
+            </figure>
+            <section class="card-info-container">
+                <h2 class="item" id="title">Titulo</h2>
+                <span>
+                    <p class="item" id="author">Author</p>
+                    <p class="item" id="cover">Cover</p>
+                    <p class="item" id="price">Price</p>
+                    <p class="item" id="rating">Rating</p>
+                </span>
+            </section>
+        </div>
+    </div>  
 </div>
